Fix admin screen issue where the Bulk Actions Arrow in MEMBER INFORMATION is too close to text. Fixes #98

--- a/admin/resources/css/spa-admin.css
+++ b/admin/resources/css/spa-admin.css
@@ -1822,6 +1822,7 @@ img.sf-iconset-icon-img{
 
 
 #sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions select {
+		min-width: 150px;
         width: auto;
         margin: 0;
 }
